# pharmabot

./: .gitignore  DEV_GUIDELINES.md  README.md  check_syntax.py  gui_launcher.py  pyproject.toml
.github/workflows/: build.yml
src/pharmabot/: basket.py  catalog.py  database.py  exceptions.py  gui.py  main.py  models.py  scraper.py
src/pharmabot/gui/: app.py
src/pharmabot/gui/pages/: basket.py  catalog.py  home.py  optimization.py  scraper.py
src/pharmabot/services/: basket.py  catalog.py  price_optimizer.py  scraper.py
tests/: conftest.py  test_add_product.py  test_basket.py  test_catalog.py  test_gui.py  test_gui_catalog.py  test_incremental_scraping.py  test_list_products.py  test_optimization_page.py  test_price_optimizer.py  test_scraper_all.py  test_scraper_list_offers.py
