[project]
name = "pharmabot"
version = "0.1.0"
description = "A CLI tool to compare medication prices on trovaprezzi.it"
readme = "README.md"
authors = [
    { name = "francesco bagagli", email = "francesco.bagagli@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "rich>=14.2.0",
    "seleniumbase>=1.33.9",
    "sqlmodel>=0.0.27",
    "tenacity>=9.1.2",
    "typer>=0.20.0",
]

[project.scripts]
pharmabot = "pharmabot.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]
